--- a/references.bib
+++ b/references.bib
@@ -298,3 +298,24 @@ author = "Zhou, S. and Shen, X. and Wolfe, D.A.",
 title = "Local asymptotics for regression splines and confidence regions",
 year = "1998",
 journal = "Ann. Statist."}
+
+
+@article{wang2022,
+author = {Wang, J. And Gu, L. And Yang, L.},
+title = {Oracle-efficient estimation for functional data error distribution with simultaneous confidence band},
+journal = {Computational Statistics & Data Analysis},
+volume = {167},
+pages = {107363},
+year = {2022},
+}
+
+
+
+@article{Zhang2020,
+author = {Zhang, Y. And Wang, C. And Wu, F. And Huang, K. And Yang, L. And Ji, L.},
+title = {Prediction of working memory ability based on {EEG} by functional data analysis},
+journal = {J Neur. Meth.},
+volume = {333},
+pages = {108552},
+year = {2020},
+}
