--- a/ConfBand.qmd
+++ b/ConfBand.qmd
@@ -16,7 +16,7 @@ date: last-modified
 date-modified: last-modified
 description: |
 abstract: >+
- While confidence intervals for finite quantities are well-established, constructing confidence bands for objects of infinite dimension, such as functions, poses challenges. In this paper, we explore the concept of parametric confidence bands for functional data with an orthonormal basis. Specifically, we revisit the method proposed by Sun and Loader, which yields confidence bands for the projection of the regression function in a fixed-dimensional space. This approach can introduce bias in the confidence bands when the dimension of the basis is misspecified. Leveraging this insight, we introduce a corrected, unbiased confidence band. Surprisingly, our corrected band tends to be wider than what a naive approach would suggest. To address this, we propose a model selection criterion that allows for data-driven estimation of the basis dimension, balancing the trade-off between bias and variance. Throughout the paper, we illustrate these strategies using an extensive simulation study. We conclude with an application to real data.
+ While confidence intervals for finite quantities are well-established, constructing confidence bands for objects of infinite dimension, such as functions, poses challenges. In this paper, we explore the concept of parametric confidence bands for functional data with an orthonormal basis. Specifically, we revisit the method proposed by Sun and Loader, which yields confidence bands for the projection of the regression function in a fixed-dimensional space. This approach can introduce bias in the confidence bands when the dimension of the basis is misspecified. Leveraging this insight, we introduce a corrected, unbiased confidence band. Surprisingly, our corrected band tends to be wider than what a naive approach would suggest. To address this, we propose a model selection criterion that allows for data-driven estimation of the basis dimension, balancing the trade-off between bias and variance. The bias is then automatically corrected after dimension selection. Throughout the paper, we illustrate these strategies using an extensive simulation study. We conclude with an application to real data.
 keywords: [functional data, repeated data, confidence band, Kac-Rice formulae, bias, dimension selection]
 citation:
   type: article-journal
@@ -45,7 +45,7 @@ We consider multiple independent observations of the same function, yielding noi
 
 Measuring the uncertainty of an estimator is usually done using confidence intervals. In this paper, our focus lies specifically on providing a simultaneous confidence band for the function means, rather than point-wise confidence intervals. This task presents several challenges: the confidence band must effectively control the simultaneous functional type-I error rate, as opposed to point-wise rates; it must strike a balance between being sufficiently conservative to maintain a confidence level while not being overly so as to render it meaningless; and the method used to construct this confidence band should be computationally feasible for practical application.
 
-Several developments have already been proposed to answer these questions. First, consider the case with only one individual (no repetition) but with many time points. Some methods study the asymptotic distribution of the infinity norm between the true function and its estimator. The asymptotic in the number of time points is studied in @Hall1991, @Claeskens2003. This approach works only for large datasets in time and is likely to be too conservative otherwise. For small samples, bootstrap methods have been developed to compute the confidence band (@Neumann1998, @Claeskens2003), but with a high computational cost. Another approach is to construct confidence bands based on the volume of the tube formula. @sun1994 studied the tail probabilities of suprema of Gaussian random processes. This approach is based on an unbiased linear estimator of the regression function. @Zhou1998 used the volume-of-tube formula for estimation by regression splines. @Krivobokova2010 used this method for the construction of confidence bands by penalized spline estimators. They proposed to mix Bayesian and frequentist approaches, to get the good properties from the Bayesian world but reducing the variability to be less conservative using the frequentist approach. The bias is considered through spline modeling, assuming sufficient knots are considered. @wang2022 proposed Kolmogorov-Smirnov simultaneous confidence band by modelising the error distribution, avoiding the esitmation of the covariance structure of the underlying stochastic process. They rely on B-splines for the estimation of the mean curve.
+Several developments have already been proposed to answer these questions. First, consider the case with only one individual (no repetition) but with many time points. Some methods study the asymptotic distribution of the infinity norm between the true function and its estimator. The asymptotic in the number of time points is studied in @Hall1991, @Claeskens2003. This approach works only for large datasets in time and is likely to be too conservative otherwise. For small samples, bootstrap methods have been developed to compute the confidence band (@Neumann1998, @Claeskens2003), but with a high computational cost. Another approach is to construct confidence bands based on the volume of the tube formula. @sun1994 studied the tail probabilities of suprema of Gaussian random processes. This approach is based on an unbiased linear estimator of the regression function. @Zhou1998 used the volume-of-tube formula for estimation by regression splines. @Krivobokova2010 used this method for the construction of confidence bands by penalized spline estimators. They proposed to mix Bayesian and frequentist approaches, to get the good properties from the Bayesian world but reducing the variability to be less conservative using the frequentist approach. The bias is considered through spline modeling, assuming sufficient knots are considered. @wang2022 proposed Kolmogorov-Smirnov simultaneous confidence band by modeling the error distribution, avoiding the estimation of the covariance structure of the underlying stochastic process. They rely on B-splines for the estimation of the mean curve.
  @Liebl2019 have proposed a method based on random field theory and the volume-of-tube formula. They provide a band with locally varying widths using an unbiased estimator. Their method does not require the estimation of the full covariance function of the estimator, but only its diagonal. This reduces the computational time. From a practical viewpoint, @CB_survivalAnalysis2022 introduce a package to popularize simultaneous confidence bands, in the context of survival analysis. 
 
 Some papers, like ours, rely on several observations of the same function. @bunea2011 propose a threshold-type estimator and derive error bounds and simultaneous confidence bands, having an unbiased estimator. @TELSCHOW202270 propose a simultaneous confidence band based on the Gaussian kinematic formula. Again, it assumes access to an unbiased estimator of the function of interest.
@@ -235,7 +235,7 @@ First,  in @sec-projection_model and @sec-estim, we define for a fixed $L$ the c
 
 ## Approximation of the model on a finite family {#sec-projection_model}
 
-Let $f^{L^*} \in \mathcal{S}^{L^*}$ with $L^*$ unknown, and consider the space $\mathcal{S}^L$ for $L\in \{1, \ldots, L_{\max}\}$ fixed. 
+Let $f^{L^*} \in \mathcal{S}^{L^*}$ with $L^*$ unknown, and consider the space $\mathcal{S}^L$ for $L\in \{L_{\min}, \ldots, L_{\max}\}$ fixed. 
 As $\mathcal{S}^L$ is a  family of linearly independent functions, there always exists a unique vector $\mu^{L,L^*}$ of coefficients defining $f^{L,L^*}(t) = \sum_{\ell_=1}^L \mu_\ell^{L,L^*} B_\ell^L(t)=B^L(t) \mu^{L,L^*}$ such that
 $$f^{L,L^*} = \arg\min_{f \in \mathcal{S}^L}\{\|f^{L^*} - f\|_2^2\},$$
 and 
@@ -273,7 +273,7 @@ The first $L$ elements of $\underline{\mu}^{L,L^*}$ are different to $\mu_\ell^{
 
 :::
 
-These properties are illustrated in @fig-coefficients. The true dimension is $L^*=11$. Three families are considered,  Fourier, Legendre and Splines. The plots display the absolute difference between the coefficients $\mu_\ell^{L^*}$ and the projected coefficients $\underline{\mu}^{L,L^*}$, for different $\ell$ in x-axis and for different values of $L$ and $n$ of the y-axis, namely a case with $L<L^*$ and two values of $n$: $L=7, n=20$ and $L=7, n=100$; and a case with $L>L^*$ and two values of $n$: $L=15, n=20$ and $L=15, n=100$. The absolute difference is represented as a gradient of color, this gradient being adapted for each functional family. We can see that as Legendre (resp. Fourier) are orthonormal (resp. orthogonal) families, the differences are close to $0$ when $L=15$, whatever the values of $n$. When $L<L^*$, the difference is close to $0$ when $n$ is large. 
+These properties are illustrated in @fig-coefficients. The true dimension is $L^*=11$. Three families are considered,  Fourier, Legendre and Splines. The plots display the absolute difference between the coefficients $\mu_\ell^{L^*}$ and the projected coefficients $\underline{\mu}^{L,L^*}$, for different $\ell$ in x-axis and for different values of $L$ and $n$ in the y-axis, namely a case with $L<L^*$ and two values of $n$: $L=7, n=20$ and $L=7, n=100$; and a case with $L>L^*$ and two values of $n$: $L=15, n=20$ and $L=15, n=100$. The absolute difference is represented as a gradient of color, this gradient being adapted to each functional family. We can see that as Legendre (resp. Fourier) are orthonormal (resp. orthogonal) families, the differences are close to $0$ when $L=15$, whatever the values of $n$. When $L<L^*$, the difference is close to $0$ when $n$ is large. 
 This property does not hold for the spline family, which is not orthogonal. 
 
 ```{r, fig.height=7, fig.width=7}
@@ -348,7 +348,7 @@ Moreover, $B^L()\mathbf{P}^L y_i$ is a Gaussian process with mean $\underline{f}
 The proof is given in Appendix. 
 
 @fig-estimatorL displays estimators calculated with different dimensions $L$. Data are generated with $L^*=11$, $L^\varepsilon=20$, $n=50$ and $N=40$. The true function and its projection $\underline f^{L,L^*}$  are in cyan, and the estimator $\underline{\hat{f}_{}}^{L,L^*}$ is in red.  We compute it for the three families, Legendre, Fourier and splines. 
-In all cases, the estimators are very precise when considering the relevant function, but estimating a function of dimension $L^*$ with a function of dimension $L<L^*$ is not consistent. Note that the performance of the estimator for the spline family is also good, even if the family is not orthonormal, because we work here at the level of the function (and not at the level of the coefficients).  
+In all cases, the estimators are very precise when considering the relevant dimension, but estimating a function of dimension $L^*$ with a function of dimension $L<L^*$ is not consistent. Note that the performance of the estimator for the spline family is also good, even if the family is not orthonormal, because we work here at the level of the function (and not at the level of the coefficients).  
 
 
 ```{r , out.height = "50%", fig.width=7}
@@ -420,7 +420,7 @@ ggplot(data = df, aes(x = Time, y = f, color = type)) +
 
 ```
 
-Even if the estimator $\underline{\hat{f}_{}}^{L,L^*}$ is defined on the functional space associated to $\mathbf{S}^L$, it can also be seen as an estimator of the function $f^{ L^*}$ which lies in the space $\mathcal{S}^{L^*}$. In that case, the error includes a functional approximation term due to the approximation of $f^{ L^*}$ on the space $\mathcal{S}^L$, which will be nonzero if $L\neq L^*$. It corresponding to the bias of the estimator $\underline{\hat{f}_{}}^{L,L^*}$, i.e. the difference between its expectation and the true $f^{ L^*}$. Indeed, recalling that $f^{L^*} = \underline{f}^{L^*,L^*}$, the error of estimation can be decomposed into
+Even if the estimator $\underline{\hat{f}_{}}^{L,L^*}$ is defined on the functional space associated to $\mathbf{S}^L$, it can also be seen as an estimator of the function $f^{ L^*}$ which lies in the space $\mathcal{S}^{L^*}$. In that case, the error includes a functional approximation term due to the approximation of $f^{ L^*}$ on the space $\mathcal{S}^L$, which will be nonzero if $L\neq L^*$. It corresponds to the bias of the estimator $\underline{\hat{f}_{}}^{L,L^*}$, i.e. the difference between its expectation and the true $f^{ L^*}$. Indeed, recalling that $f^{L^*} = \underline{f}^{L^*,L^*}$, the error of estimation can be decomposed into
 $$
 \underline{\hat{f}}^{L, L^*}(t) -f^{L^*}(t) 
 = \underline{\hat{f}}^{L, L^*}(t) - \underline{f}^{L, L^*}(t) + \underline{f}^{L, L^*}(t) - \underline{f}^{L^*,L^*}(t) =: Stat_{L,L^*}(t) + Bias_{L,L^*}(t),
@@ -466,7 +466,7 @@ The objective is to construct a confidence band for the two functions $\underlin
 
 \bigskip
 ## Confidence band for $\underline{f}^{L,L^*}$ {#sec-bandSun2}
-Let $L\in \{1, \ldots, L_{\max}\}$.
+Let $L\in \{L_{\min}, \ldots, L_{\max}\}$.
 Consider $1-\alpha$ as a fixed confidence level. Our aim is to find a function $d^L()$ such that
 $$\mathbb{P}\left( \forall t \in [0,1],\; \underline{\hat{f}_{}}^{L,L^*}(t) -d^L(t)\leq \underline{f}^{L,L^*}(t)\leq \underline{\hat{f}_{}}^{L,L^*}(t) +d^L(t)\right) = 1-\alpha.$$
 Consider the normalized statistics $Z_L(t)$ which is a centered and reduced Gaussian process. We want to find the quantile $q^L$ satisfying
@@ -516,7 +516,7 @@ Let us describe the behavior of $\hat d^L$:
 - $\|\hat d^L\|_\infty$ increases with $L$
 - When the functions $(B_\ell^L)_{1\leq \ell \leq L}$ consists in an orthonormal family, $\|\hat d^L\|_\infty$ increases with $L$ until $L=L^*$ and then  $\|\hat d^L\|_\infty$ is constant with $L$.
 
-This band is illustrated on @fig-bandL. It displays on the top row several functional data generated under either the Fourier family (left), Legendre (middle) or Spline (right),    on the middle row the confidence bands of $\underline f^{L,L^*}$ for different values of $L=3,5$ and $11$, and on the bottom row the bound $\hat d^L$. The true functions $\underline f^{L,L^*}$ are displayed in cyan and the confidence bands in purple. The bands are very precise for each $L$. The behavior of $\hat d^L$ increases with $L$. As $d^L$ can be seen as a variance, $\hat d^L(t)$ is larger on the boundary of the domain, as there are less observations near 0 and 1. 
+This band is illustrated on @fig-bandL. It displays on the top row several functional data generated under either the Fourier family (left), Legendre (middle) or Spline (right),    on the middle row the confidence bands of $\underline f^{L,L^*}$ for different values of $L=3,5$ and $11$, and on the bottom row the bound $\hat d^L$. The true functions $\underline f^{L,L^*}$ are displayed in cyan and the confidence bands in purple. The bands are very precise for each $L$. The behavior of $\hat d^L$ increases with $L$. As $d^L$ can be seen as a variance, $\hat d^L(t)$ is larger on the boundary of the time domain, as there are less observations near 0 and 1. 
 
 We also evaluate numerically the levels of the obtained confidence bands. For this, 1000 datasets are simulated, the confidence band is estimated for each of them. 
 The empirical confidence level is then evaluated as the proportion of confidence bands that contain the true function. @tbl-levelL presents the empirical confidence levels for different values of $L$ and two sample sizes $n=50$ and $n=150$, with $N=40$. 
@@ -734,11 +734,11 @@ the infinite norms on each term before bounding them does not take into account 
 
 A second strategy consists in keeping the functional aspect by bounding the infinity norm of the sum of the functional two terms. This approach is detailed in this section. 
 
-In @sec-construction2, we first rewrite the band as a band around $\underline{f}^{L,L^*}(t)$. We then use a first subsample $\mathbf{y}^1$ to estimate the bound as defined in @sec-bandSun. A second subsample $\mathbf{y}^2$ is used to estimate the bias term (without the infinite norm). This yields a pointwise correction of the bias, and the final confidence band is centered around $\underline{\hat{f}}^{L_{\max},L^*}$. This procedure provides a collection of confidence bands, for $L=L_{\min}, \ldots, L_{\max}$,  each achieving a given confidence level but with varying width. Then, in @sec-SelectionL2, we propose a criterion to select the "best" band by minimizing its width. 
+In @sec-construction2, we first rewrite the band as a band around $\underline{f}^{L,L^*}(t)$. We then use a first subsample $\mathbf{y}^1$ to estimate the bound as defined in @sec-bandSun. A second subsample $\mathbf{y}^2$ is used to estimate the bias term (without the infinite norm). This yields a pointwise correction of the bias, and the final confidence band is centered around $\underline{\hat{f}}^{L_{\max},L^*}$. This procedure provides a collection of confidence bands, for $L\in \{L_{\min}, \ldots, L_{\max}\}$ with varying width. Then, in @sec-SelectionL2, we propose a criterion to select the "best" band by minimizing its width. 
 
 ## Construction of the band of $f^{L^*}$ for a given $L$ {#sec-construction2}
-We introduce  two independent sub-samples $\mathbf{y}^1$ and $\mathbf{y}^2$ of $\mathbf{y}$ of length $n_1$ and $n_2$ 
-such that $n_1+n_2=n$. \textcolor{red}{On le coupe en temps ou bien on sous-echantillonne ?}
+We introduce  two independent sub-samples $\mathbf{y}^1$ and $\mathbf{y}^2$ of $\mathbf{y}$ of length $N_1$ and $N_2$ 
+such that $N_1+N_2=N$. 
 
 We use the first sub-sample $\mathbf{y}^1$ to calculate $\underline{\hat{f}_1}^{L,L^*}(t)$, an estimator of $\underline{f}^{L,L^*}(t)$ and  a functional bound denoted $\hat d_1^L$ that controls the bias term $\underline{f}^{L,L^*}(t)-\underline{\hat{f}_1}^{L,L^*}(t)$. This bound is defined in @sec-bandSun applied on $\mathbf{y}^1$, for a given level $\alpha$, such that:
 
@@ -951,7 +951,6 @@ if (run == TRUE){
   colnames(perf) = vec.n
   save(perf, file = "Res_Tab2.RData")
 } else {load('Res_Tab2.RData')}
-#kable(perf)
 
 perf %>%
   kable("latex", booktabs = TRUE) %>%
@@ -960,13 +959,13 @@ perf %>%
 
 ## Influence of $L$ {#sec-SelectionL2}
 
-This approach gives a collection of confidence bands for different values of $L$. The confidence bands have different widths for a same confidence level $1-\alpha\beta$. It is thus natural to want to select one of them. This means we want to select the best dimension $L$ among the collection $\{1, \ldots, L_{\max}\}$. We need to define what  "best" means.  It is quite intuitive to focus on the band that is the thinnest. Thinnest could be thought in different norms, the infinity norm, the L1 norm. Here we consider the infinity norm of the width of the confidence band, which gives a preference to smooth bands. We thus define the following criteria
+This approach gives a collection of confidence bands for different values of $L$. The confidence bands have different widths for a same confidence level $1-\alpha\beta$. It is thus natural to want to select one of them. This means we want to select the best dimension $L$ among the collection $\{L_{\min}, \ldots, L_{\max}\}$. We need to define what  "best" means.  It is quite intuitive to focus on the band that is the thinnest. Thinnest could be thought in different norms. Here we consider the infinity norm of the width of the confidence band, which gives a preference to smooth bands. We thus define the following criteria
 
 $$
 \hat L = \arg\min_L \left\{\sup_{t} |\hat\theta_2^L(t)-\hat\theta_1^L(t)|\right\} = \arg\min_L \left\{\sup_t | \hat d^L(t) + \hat d^{L,L_{\max}}(t)|\right\}.
 $$ {#eq-def-Lhat}
 
-We illustrate the different terms involved in @eq-def-Lhat. In @fig-dLLmax, we plot for a given dataset, the infinity norm of the width of the band $\hat d^L(t) + \hat d^{L,L_{\max}}(t)$ (top), of  $\hat d^L(t)$ (middle) and $\hat d^{L,L_{\max}}(t)$ (bottom) functions obtained with the Fourier (left column), Legendre (middle column) and Spline (right column) basis. As already said, $\|\hat d^L\|_{\infty}$ increases with $L$ while  $\|\hat d^{L,L_{\max}}\|_{\infty}$ decreases (and is zero when $L>L\varepsilon$). The width of the band wrt $L$ does not have a $U$-shape, as expected. It is thus difficult to minimize this criterion. 
+We illustrate the different terms involved in @eq-def-Lhat. In @fig-dLLmax, we plot for a given dataset, the infinity norm of the width of the band $\hat d^L(t) + \hat d^{L,L_{\max}}(t)$ (top), of  $\hat d^L(t)$ (middle) and $\hat d^{L,L_{\max}}(t)$ (bottom) functions obtained with the Fourier (left column), Legendre (middle column) and Spline (right column) basis. As already said, $\|\hat d^L\|_{\infty}$ increases with $L$ while  $\|\hat d^{L,L_{\max}}\|_{\infty}$ decreases (and is zero when $L>L^{\varepsilon}$). The width of the band wrt $L$ does not have a $U$-shape, as expected. It is thus difficult to minimize this criterion. 
 
 ```{r, out.height = "50%", fig.width=7}
 #| label: fig-dLLmax
@@ -1005,7 +1004,7 @@ ggplot(df, aes(x = dimension, y = Norm, fill = type)) +
 
 ```
 
-We then evaluate the performance of the selection criteria. To do that, we simulate 100 repeated datasets. Confidence bands and the norm of their widths are computed for several $L$. We apply the selection criteria and plot the distribution of the estimated dimension $\hat L$ in @fig-modelsel, for the three basis families. The estimated dimension is almost always larger than the true $L^*=11$. Being larger is not a problem and  the selected band is unbiased and has the correct level as soon as $L^\varepsilon$ is large, which was the objective. However, the criteria has the tendency to select a (too) smooth band. It is not satisfactory not to be able to select the true dimension. This is why we propose a new approach in @sec-modsel. In @sec-comparisonBands, we also illustrate that this band is too conservative \textcolor{red}{modifier}. 
+We then evaluate the performance of the selection criteria. To do that, we simulate 100 repeated datasets. Confidence bands and the norm of their widths are computed for several $L$. We apply the selection criteria and plot the distribution of the estimated dimension $\hat L$ in @fig-modelsel, for the three basis families. The estimated dimension is almost always larger than the true $L^*=11$. Being larger is not a problem and  the selected band is unbiased and has the correct level as soon as $L^\varepsilon$ is large, which was the objective. However, the criteria has the tendency to select a (too) smooth band. In @sec-comparisonBands, we also illustrate that this band is too conservative. 
 
 ```{r, out.height = "25%", fig.width=7}
 #| label: fig-modelsel
@@ -1067,8 +1066,8 @@ ggplot(data = dfLhat, aes(x = L, y = Lhat)) +
 The  reformulation of the band around $\underline{\hat f}_2^{ L_{\max}, L^*}$  is close to the band presented in @sec-bandSun for $L=L_{\max}$, that is a band centered around $\underline{\hat f}^{ L_{\max}, L^*}$. A natural question is to understand what is the gain by doing so instead of using the band from @sec-bandSun with $L=L_{\max}$, namely the band $[\underline{\hat f}^{ L_{\max}, L^*}(t)-\hat d^{L_{\max}}(t); \underline{\hat f}^{ L_{\max}, L^*}(t)+\hat d^{L_{\max}}(t)]$. To do that, we have to understand the behavior of the different terms. 
 
 It is difficult to compare theoretically the width of the two bands. 
-We compare them with simulations. For 100 repeated datasets, we compute three different confidence bands: the band defined in @prp-CBf with $\hat L$ defined in @eq-def-Lhat, the band constructed in @sec-bandSun with  $L_{\max}$ and the ideal (and not accessible) band constructed in @sec-bandSun with the true $L^*$. In @fig-width, we present the boxplots of the norms of the width of the band with $\hat L$ (left), with $L_{\max}$ (middle) and $L^*$ (right).  
-The width of the confidence band with the true $L^*$ is smaller, which is expected but unfortunately not achievable. What was not expected, but sad, is that the width of the confidence band constructed in @sec-bandSun with some $L_{\max}$ is smaller than our band with a correction of the bias and the model selection criteria. This may be understood because we estimate two different quantities, on smaller dataset, for more conservative level ($1-\alpha$ and $1-\beta$ respectively) to achieve at the end the confidence level of $1-\alpha\beta$. The use of the two independent subsamples is mandatory to control the probability in the proof of @thm-sunLoader. Therefore it is not possible to correct this problem.  In the next section, we come back to the confidence bands proposed in @sec-bandSun and propose a model selection criterion to take into account the bias. 
+We compare them with simulations. For 100 repeated datasets, we compute three different confidence bands: the band $CB_{2}$ defined in @prp-CBf with $\hat L$ defined in @eq-def-Lhat, the band $CB_1$ constructed in @sec-bandSun with  $L_{\max}$ and the ideal (and not accessible) band constructed in @sec-bandSun with the true $L^*$. In @fig-width, we present the boxplots of the norms of the width of the band with $\hat L$ (left), with $L_{\max}$ (middle) and $L^*$ (right).  
+The width of the confidence band with the true $L^*$ is smaller, which is expected but unfortunately not achievable. What was not expected, but sad, is that the width of the confidence band $CB_1$ constructed in @sec-bandSun with some $L_{\max}$ is smaller than our band $CB_2$ with a correction of the bias and the model selection criteria. This may be understood because we estimate two different quantities, on smaller dataset, for more conservative level ($1-\alpha$ and $1-\beta$ respectively) to achieve at the end the confidence level of $1-\alpha\beta$. The use of the two independent subsamples is mandatory to control the probability in the proof of @thm-sunLoader. Therefore it is not possible to correct this problem.  In the next section, we come back to the confidence bands proposed in @sec-bandSun and propose a model selection criterion to take into account the bias. 
 
 ```{r, out.height = "25%", fig.width=7}
 #| label: fig-width
@@ -1147,8 +1146,8 @@ for (basis in c("Legendre","Fourier", "Splines")){
     c.L[L] = max(conf.band.L$c.L)
   }
   lambda = 1
-  crit = abs(rep(c.Lmax, length(vec.L)) - c.L[vec.L])# + lambda * vec.L/((dim(data$y)[1]))
-  dfCriterion = rbind(dfCriterion, data.frame(error = crit,
+  err = abs(rep(c.Lmax, length(vec.L)) - c.L[vec.L])
+  dfCriterion = rbind(dfCriterion, data.frame(error = err,
                                               dimension = vec.L,
                                               basis = rep(basis, length(vec.L))))
 }
@@ -1173,7 +1172,7 @@ In @fig-critlast, we illustrate the behavior of this selection criterion on simu
 
 ```{r, out.height = "25%", fig.width=7}
 #| label: fig-critlast
-#| fig-cap: "Illustrative example. For a given simulated dataset, we show the behavior of the criteria $\widetilde{crit}$ as a function of  dimension L, for Fourier (left), Legendre (middle) and Splines (right) basis."
+#| fig-cap: "Illustrative example. For a given simulated dataset, we show the behavior of the criteria  as a function of  dimension L, for Fourier (left), Legendre (middle) and Splines (right) basis."
 #| 
 
 compute.conf.band.L.star.3 = function(data, basis, L, Lmax = 30, alpha = 0.05, beta = 0.05){
@@ -1244,7 +1243,7 @@ In @fig-critlastmodsel,  we test which model is selected over 100 repetitions fo
 ```{r, out.height = "25%", fig.width=7}
 #| label: fig-critlastmodsel
 #| fig-cap: "Illustrative example. We show the distribution of the selected model, over 100 repetitions, with the new criteria used to select a model for different basis."
-run = FALSE
+run = TRUE
 if (run == TRUE){
   load("Res_Tab3_n50_3basisBandWidth.RData")
   L.max = 30
@@ -1297,7 +1296,7 @@ We then show in @fig-width-2 that the width of the selected model is better than
 
 ```{r, out.height = "25%", fig.width=7}
 #| label: fig-width-2
-#| fig-cap: "Illustrative example. We display within boxplots the confidence band's width over 100 repetitions for the dimension $\hat L$ selected by crit, the dimension $\tilde L$ selected by $\widetilde{crit}$, some fixed Lmax and the true (unknown) $L^{*}$ for Fourier (left), Legendre (middle) and Splines (right) basis."
+#| fig-cap: "Illustrative example. We display within boxplots the confidence band's width over 100 repetitions for the dimension selected by the several criterion introduced in this paper, for Fourier (left), Legendre (middle) and Splines (right) basis."
 #| 
 
 load('Res_Tab3_n50_3basisBandWidth_2.RData')
@@ -1318,7 +1317,6 @@ We select the level of each basis using the method introduced in  @sec-modsel.
 #| label: fig-realdata
 #| fig-cap: "Real data analysis example. We display the confidence bands for Fourier (left), Legendre (middle) and Splines (right) basis on the Berkeley Growth Study data. Black curves correspond to the confidence bands with $L_{max}$, while colored one are the confidence bands CBE. "
 #| 
-library(fda)
 data(growth)
 data = list()
 data$time = (growth$age - min(growth$age))/(max(growth$age) - min(growth$age))
@@ -1332,7 +1330,7 @@ for (basis in c("Legendre", "Splines", "Fourier")){
   if (basis == 'Fourier'){vec.L = seq(3,24, by=2)}
   c.L = c.L.Lmax = c()
   conf.band.L.max = compute.conf.band.L(data, basis, L = L.max, alpha = alpha)
-  
+  c.L.Lmax = max(conf.band.L.max$c.L)
   df.max = rbind(df.max, data.frame(Time = growth$age, 
                                     band.up = t(conf.band.L.max$f.hat.up),
                                     band.low = t(conf.band.L.max$f.hat.low),
@@ -1358,7 +1356,7 @@ for (basis in c("Legendre", "Splines", "Fourier")){
   res_growth = cbind(res_growth, c(conf.band.L.max$c.L, conf.band.L.star.2$c.L, mod.sel))
 }
 colnames(res_growth) = c("Legendre", "Splines", "Fourier")
-row.names(res_growth) = c("Length Lmax", "Length selected", "Model selected")
+row.names(res_growth) = c("Width Lmax", "Width selected", "Model selected")
 df.data = data.frame(Time = rep(growth$age,dim(data$y)[2]), f = c(data$y), ind = rep(1:(dim(data$y)[2]), each = dim(data$y)[1]))
 p1 <- ggplot()+  geom_line(data=df.data, aes(x=Time, y =f, group=ind), color = "lightgrey",linewidth= 0.5)+
   geom_line(data = dfBandup, aes(x = Time, y = bandup,col = basis, group = basis), linewidth = 0.4) +
@@ -1368,14 +1366,19 @@ p1 <- ggplot()+  geom_line(data=df.data, aes(x=Time, y =f, group=ind), color = "
   facet_grid(~ basis)
 
 p1
+```
+
+```{r, out.height = "25%", fig.width=7}
+#| label: tbl-realdata
+#| fig-cap: "Real data analysis example, Berkeley Growth Study data. We display the width of the confidence bands for Fourier, Legendre and Splines basis for the confidence band  of  @sec-bandSun with Lmax and the confidence band  of @sec-modsel. We also precise the dimension of the selected model."
 
 res_growth %>% 
  kable("latex", booktabs = TRUE) %>%
-  add_header_above(c("" = 1, "Basis" = 3))
+  add_header_above(c(" " = 1, "Basis" = 3))
 ```
 
-As the data is not periodic, the Fourier basis is meaningless, and so is the associated confidence band, whatever the dimension considered. Both splines and Legendre basis give similar confidence bands. 
-When analyzing the width of the bands compared with the one obtained with $L_{\max}$, we see that there are less smooth but also smaller, and from our empirical study we guess that it makes a trade-off between bias and variance. 
+In @fig-realdata, we display the confidence bands associated to @sec-bandSun in black and the one associated to @sec-modsel, for the three basis. As the data is not periodic, the Fourier basis is meaningless, and so is the associated confidence band, whatever the dimension considered. Both splines and Legendre basis give similar confidence bands. 
+When analyzing the width of the bands in @tbl-realdata, compared with the one obtained with $L_{\max}$, we see that there are less smooth but also smaller, and from our empirical study we guess that it makes a trade-off between bias and variance. 
 
 
 # Conclusion {#sec-conc}
@@ -1383,8 +1386,8 @@ This paper discusses the construction of confidence bands when considering a lin
 Then, several confidence bands are proposed. Throughout the paper, extensive experimental study on Fourier, Legendre and Spline basis have illustrated the theoretical and methodological proposition, and a real data study is proposed to conclude the paper. 
 
 
-First, when considering a functional family with a fixed level, we discuss the confidence band derived from @sun1994. It is biased if the level is not high enough to approximate well the true function.
-Then, a new confidence band is proposed that correct this bias. To do so, the bias is estimated and the additional randomness is controlled. A  selection criterion is proposed to select the best dimension
+First, when considering a functional family with a fixed dimension, we discuss the confidence band derived from @sun1994. It is biased if the dimension is not high enough to approximate well the true function.
+Then, a new confidence band is proposed that correct this bias. To do so, the bias is estimated and the additional randomness is controlled. A  selection criterion is proposed to select the best dimension. 
 Unfortunately, the two kinds of randomness are leading to a wider confidence band, and this result is then not more interesting than the naive one, which consists in taking the largest  possible dimension $L_{\max}$. 
 Finally, a heuristic  selection criterion is proposed to select the dimension on the first confidence band, that did not correct the bias. It takes into account the bias as well as the variance, to select a moderate dimension.
 
